--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,18 +1,14 @@
-version: 2
+version: "2"
 
 run:
   timeout: 5m
   go: "1.24"
 
 linters:
-  disable-all: true
+  disable-default: true
   enable:
     - errcheck
     - govet
     - ineffassign
     - staticcheck
     - unused
-
-linters-settings:
-  govet:
-    enable-all: false
