--- a/.golangci.yml
+++ b/.golangci.yml
@@ -3,3 +3,11 @@ version: "2"
 run:
   timeout: 5m
   go: "1.24"
+
+linters:
+  enable:
+    - errcheck
+    - govet
+    - ineffassign
+    - staticcheck
+    - unused
