--- a/.golangci.yml
+++ b/.golangci.yml
@@ -12,8 +12,7 @@ linters:
     - staticcheck
     - unused
     - revive
-
-linters-settings:
-  revive:
-    rules:
-      - name: exported
+  settings:
+    revive:
+      rules:
+        - name: exported
